--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Brock Library Now and Then
 tagline: the library you know and love over 6 decades
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: A treasure trove of photos showing the growth and development of the Brock University Library 
+description: A treasure trove of photos showing the development of the Brock University Library and the generations of students who studied there
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Brock University Library 
 
