Tag line changed

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/evelynasmith/BrockLibraryNowandThen
 # title of site appears in banner
 title: Brock Library Now and Then
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: the library you know and love over 6 decades
+tagline: The Library you Know and Love Over Six Decades
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: A treasure trove of photos showing the development of the Brock University Library and the generations of students who studied here.
